# AutomatiQ

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  VISION.md  pyproject.toml  requirements.txt
.github/workflows/: lint.yaml  test.yaml
scripts/: generate_svg.py  precompute_gol.py  render_final_frame.py
src/automatiq/: __init__.py  __main__.py  agent.py  bin_manager.py  config.py  console.py  key_checker.py  main.py
src/automatiq/cli/: automatiq_banner.py  callbacks.py  console.py  orchestrator.py
src/automatiq/core/: agent.py  bin_manager.py  cancel_standard.py  config.py  events.py  history.py  llm.py  main.py  prompts.py  tools.py
src/automatiq/core/ipython_sandbox/: sandbox.py  utils.py  worker.py
src/automatiq/core/recorder/: __init__.py  browser_agent.py  data_compressor.py
src/automatiq/ipython_sandbox/: sandbox.py  utils.py  worker.py
src/automatiq/recorder/: __init__.py  ai_analyzer.py  browser_agent.py  data_compressor.py  video_recorder.py
src/automatiq/recorder/js/: telemetry.js
tests/core/: test_ipython_sandbox.py  test_main_agent.py  test_schema.py
tests/core/sandbox/: conftest.py  test_cancellation.py  test_execution.py
